--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ obj
 /HM_11_qq/HM.Eleven.QQPlugin/bin/CQP
 /HM_11_qq/HM.Eleven.QQPlugin/bin/Debug
 /HM_11_qq/HM.Eleven.QQPlugin/bin/Release
+/HM_11_qq/WechatServer
