--- a/HM_11_qq/HM.Eleven.QQPlugin/HM.Eleven.QQPlugins.csproj
+++ b/HM_11_qq/HM.Eleven.QQPlugin/HM.Eleven.QQPlugins.csproj
@@ -75,6 +75,7 @@
     <Compile Include="MainController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Struct\Link.cs" />
+    <Compile Include="Struct\QQInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
